# stock--analysis

./: .gitignore  README.md  docker-compose.yml
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/workflows/: lint.yml
containers/api/: Dockerfile  api.env
containers/postgres/: db.env
docs/: 02-docker-architecture.md
docs/project-base/: 01-setup.md  03-alembic-migration.md
docs/stock_price/: 01-batch-import.md
src/: alembic.ini  mypy.ini  pyproject.toml  ruff.toml
src/app/: __init__.py  main.py
src/app/batch/: __init__.py  fetch_stock_prices.py
src/app/common/: __init__.py  log_prefix.py
src/app/database/: database.py  seed.sql
src/app/database/model/: __init__.py  hero.py  stock_price_1m.py  ticker.py
src/app/database/repository/: __init__.py  stock_price_1m_repository.py  ticker_repository.py
src/app/exceptions/: __init__.py  handlers.py  not_found.py  schema.py
src/app/infra/: __init__.py
src/app/migration/: env.py  script.py.mako
src/app/migration/versions/: 2026_01_26_2018-4390378ebd41_create_hero_table.py  2026_02_15_1517-cc5837810f56_create_stock_prices_1m_table.py  2026_02_17_1419-0a3dca516d11_add_related_stock_table.py  2026_03_02_1225-48b9ce647bd9_fix_stock_foreign_key.py  2026_03_05_0000-seed_tickers.py  2026_03_05_0001-seed_tickers_mitsubishi_corp.py
src/app/settings/: __init__.py  settings.py
src/app/stock_price/: __init__.py  router.py  service.py
src/app/stock_price/protocol/: __init__.py  stock_data_fetcher.py
src/app/stock_price/schema/: __init__.py
src/app/stock_price/schema/dto/: __init__.py  stock_price_data_point.py
src/app/stock_price/schema/request/: __init__.py  stock_price_query.py
src/app/stock_price/schema/response/: __init__.py  ticker_price_data.py
src/app/ticker/: __init__.py  router.py
src/app/ticker/schema/: __init__.py  ticker.py
