[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.30.0",
    "alembic>=1.18.1",
    "fastapi>=0.128.0",
    "sqlmodel>=0.0.31",
    "uvicorn[standard]>=0.40.0",
    "pydantic-settings>=2.12.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
    "mypy>=1.14.0",
    "debugpy>=1.8.0",
]

[tool.ruff]
line-length = 80
target-version = "py314"
extend-exclude = ["**/migration/**", "dist", "build", "node_modules"]

# --- Lint: 実害系 + FastAPI 向けだけを有効化 ---
[tool.ruff.lint]
select = [
    "D", # pydocstyle（docstringのスタイルチェック）
    "F", # Pyflakes（未使用/未定義）
    "I", # import 並べ替え（isort 相当）
    "UP", # pyupgrade（最新構文へ）
    "B", # bugbear（バグ誘発パターン）
    "C4", # 内包表記の最適化
    "RUF", # Ruff 独自
    "FAST", # ← FastAPI 向けルール（Annotated 推奨など）
]

ignore = [
    "D100", # モジュールの docstring チェックを無効化
    "D107", # __init__.py の docstring チェックを無効化
    "D203", # クラス定義前に空行1行を要求（D211と競合するため無効化）
    "D213", # docstring要約を2行目に要求（D212と競合するため無効化）
    "D400", # docstringのピリオドを無効化
    "D415", # docstringの最終行に空行を要求しない
]

# bugbear の “immutable call” 例外に FastAPI の Depends を追加（B008対策）
# ※ 公式Issueでも fastapi.Depends を追加する運用が紹介されています
[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.params.Depends"]  # B008 回避用  [oai_citation:1‡GitHub](https://github.com/tiangolo/fastapi/issues/1522?utm_source=chatgpt.com)

# --- Formatter: ruff format ---
[tool.ruff.format]
quote-style = "double"      # Black互換。好みで "preserve" でもOK
indent-style = "space"
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = "dynamic"

# --- Type Check: mypy (strict mode) ---
[tool.mypy]
python_version = "3.14"
strict = true

# 除外ディレクトリ（正規表現パターンで指定）
# migration ディレクトリ以下のすべてのファイルを除外
exclude = "^(.*/)?(migration|build|dist)/"

# Pydantic plugin
plugins = ["pydantic.mypy"]

# サードパーティライブラリの型スタブがない場合の対応
[[tool.mypy.overrides]]
module = [
    "alembic.*",
    "sqlmodel.*",
]
ignore_missing_imports = true

# Pydantic plugin設定
[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true