[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.30.0",
    "alembic>=1.18.1",
    "fastapi>=0.128.0",
    "sqlmodel>=0.0.31",
    "uvicorn[standard]>=0.40.0",
    "pydantic-settings>=2.12.0",
    "yfinance>=1.1.0",
    "pandas>=3.0.0",
    "typer>=0.23.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
    "mypy>=1.14.0",
    "debugpy>=1.8.0",
]
